--- a/Fundy Films-Website/html/signup.html
+++ b/Fundy Films-Website/html/signup.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="file:///E:/FundyFilms/Fundy%20Films-Website/css/style.css">
+    <link rel="stylesheet" href="E:\FundyFilms\FundyFilms\Fundy Films-Website\css\style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
-    <script type="text/javascript" scr="E:\FundyFilms\Fundy Films-Website\js\validation.js" defer></script>
+    <script type="text/javascript" scr="E:\FundyFilms\FundyFilms\Fundy Films-Website\js\validation.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
